// Copyright 2025 Shift Crypto AG
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package shiftcrypto.bitbox02;

message BluetoothToggleEnabledRequest {
}

message BluetoothUpgradeInitRequest {
  uint32 firmware_length = 1;
}

message BluetoothChunkRequest {
  bytes data = 1;
}

message BluetoothSuccess {
}

message BluetoothRequestChunkResponse {
  uint32 offset = 1;
  uint32 length = 2;
}

message BluetoothRequest {
  oneof request {
    BluetoothUpgradeInitRequest upgrade_init = 1;
    BluetoothChunkRequest chunk = 2;
    BluetoothToggleEnabledRequest toggle_enabled = 3;
  }
}

message BluetoothResponse {
  oneof response {
    BluetoothSuccess success = 1;
    BluetoothRequestChunkResponse request_chunk = 2;
  }
}
